# ghlens

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/ghlens/: cli.py  client.py  errors.py  models.py  queries.py
src/ghlens/formatters/: __init__.py  json_fmt.py  markdown_fmt.py
tests/: conftest.py  test_cli.py  test_client.py  test_formatters.py
